--- a/views/pokemon/index.liquid
+++ b/views/pokemon/index.liquid
@@ -14,9 +14,9 @@
     <div class="pokedex">
         {% for pokemon in allPokemon %}
         <div class="pokedex-entry-index">
-            <!-- {{ pokemon.name}}
-            {{ pokemon.id}} -->
-            <a class="pokedex-img-link" href="/pokemon/{{forloop.index0}}"><img class="pokedex-img" 
+            <p class="pokedex-entry-id">{{ pokemon.id}}</p>
+            <p class="pokedex-entry-name">{{ pokemon.name}}</p>
+            <a class="pokedex-img-link" href="/pokemon/{{pokemon._id}}"><img class="pokedex-img" 
                 src="
                 {% if pokemon.sprites.front_default != null %}
                 {{ pokemon.sprites.front_default }}
