--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!----------------------------------------
+            Google Fonts and My Css
+    ----------------------------------------->
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css">
     <link rel="stylesheet" href="/css/show.css">
     <title>Pokemon Tracker</title>
