--- a/public/css/show copy.css
+++ b/public/css/show copy.css
@@ -5,90 +5,68 @@
 
 .pokemon-entry-grid-template {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(2, 1fr);
     padding: 30px 0;
     background-color: rgb(189, 228, 170);
     box-shadow: 0 0 2px 3px var(--color-darkGrey);
     border-radius: 15px;
 }
-
 .grid-item {
     margin: 20px;
     padding: 20px 20px;
-    height: 400px;
     text-align: center;
     color: var(--color-darkGrey);
     border: 1px solid var(--color-darkGrey);
     border-radius: 15px;
     box-shadow: inset 0 0 2px 2px var(--color-darkGrey);
     background-color: whitesmoke;
-    overflow-x: hidden;
-    overflow-y: auto;
 }
-
 .pokemon-entry-grid-template p,
 li {
     font-size: 1.75em;
     margin-top: 10px;
     margin-bottom: 0;
 }
-
 .pokemon-entry-quicklook {
     position: relative;
-    grid-column: 2/3;
+    grid-column: 1/2;
     grid-row: 1/2;
 }
-
-.pokemon-type,
-.pokemon-abilities {
+.pokemon-Type {
     list-style: none;
     /* margin: 0; */
     padding: 0;
 }
-.frm-add-btn {
-    position: absolute;
-    top: 0;
-    right: 90px;
+.pokemon-Type li {
+    display: inline;
 }
-.add-btn {
-    display: flex;
-    position: absolute;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    height: 50px;
-    width: 50px;
-    font-size: 40px;
-    color: green;
-    background-color: transparent;
-    border: none;
-    transition: 250ms ease-in-out;
-}
-.add-btn:hover {
-    color: blue
-}
+
 #pokemon-entry-quicklook-img {
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
     margin-top: 10px;
+    border-radius: 15px;
+    box-shadow: 0 0 5px 2px var(--color-darkGrey);
 }
 
 .pokemon-entry-stats {
     grid-column: 1/2;
-    grid-row: 1/2;
+    grid-row: 2/3;
 }
-
-.pokemon-entry-moves {
+.pokemon-entry-damages {
     grid-column: 3/4;
     grid-row: 1/3;
 }
-
-.pokemon-entry-details {
-    grid-column: 1/2;
-    grid-row: 2/3;
+.pokemon-entry-misc {
+    grid-column: 2/3;
+    grid-row: 1/2;
 }
 
+#typeP {
+    margin: 0;
+    padding: 0;
+}
 .pokemon-entry-delete {
     position: absolute;
     top: 10px;
@@ -96,32 +74,11 @@ li {
     padding: 5px;
     width: 100px;
 }
-
 .pokemon-entry-delete:hover {
     color: var(--color-whiteGrey);
     background-color: var(--color-pokemonRed);
 }
-
 h2 {
     font-size: 2em;
     margin-bottom: 0;
 }
-
-/*----------------------------------------
-        CSS for ScrollBars
------------------------------------------*/
-::-webkit-scrollbar {
-    width: 12px;
-}
-                    
-::-webkit-scrollbar-track {
-    border-radius: 10px;
-    background-color: hidden;
-}
-                    
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color: rgb(32, 119, 32);
-    -webkit-box-shadow: inset 0 0 6px 3px rgba(0, 0, 0, 0.5); 
-}
-/*========== END SECTION ==========*/
