--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,20 +13,23 @@
     <link rel="stylesheet" href="/css/show.css">
     <title>Pokemon Tracker</title>
 </head>
+
 <body>
-    <header> 
-    {% block header%}
-    {% endblock %}
-     </header>
-    <main> 
-    {% block content%}
-    
-    {% endblock %}
-     </main>
-    <footer> 
-    {% block footer%}
-    {% endblock %}
-     </footer>
-    
+    <header>
+        <div>
+            {% block header %}{% endblock %}
+        </div>
+    </header>
+    <main>
+        {% block content%}
+
+        {% endblock %}
+    </main>
+    <footer>
+        {% block footer%}
+        {% endblock %}
+    </footer>
+
 </body>
+
 </html>
