--- a/public/css/app.css
+++ b/public/css/app.css
@@ -166,3 +166,22 @@ input:focus {
     border: 2px solid rgb(56, 158, 6);
     box-shadow: 0 0 1px 1px rgb(56, 158, 6);
 }
+
+.text-red {
+    color: var(--color-pokemonRed);
+}
+/*----------------------------------------
+        Create New Team Form
+-----------------------------------------*/
+.form-team {
+    margin: 40px;
+}
+.frm-team-name {
+    font-size: 24px;
+}
+.frm-team-img {
+    font-size: 24px;
+}
+.frm-team-btn {
+
+}
