added basic team/new.liquid route

--- a/views/team/new.liquid
+++ b/views/team/new.liquid
@@ -15,6 +15,7 @@
             <p class="frm-team-img">Team Icon:
                 <input type="text" name="teamImg" placeholder="Team Icon">
             </p>
+            <!-- maybe a color? -->
             <br>
             <br>
             <input class="frm-team-btn" type="submit" value="Create Team">
