--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css">
     <link rel="stylesheet" href="/css/show.css">
+    <link rel="stylesheet" href="/css/team.css">
     <title>Pokemon Tracker</title>
 </head>
 
