--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -17,8 +17,11 @@
 
 <body>
     <header>
-        <div>
+        <div class="header-title-div">
             {% block header %}{% endblock %}
+        </div>
+        <div class="nav-bar">
+            {% block navBar %}{% endblock %}
         </div>
     </header>
     <main>
