--- a/views/team/index.liquid
+++ b/views/team/index.liquid
@@ -6,8 +6,8 @@
 {% endblock %}
 {% block navBar %}
 <form action="/pokemon" method="GET">
-    <input class="nav-btn" type="submit" value="">
-    <input class="nav-btn" type="submit" value="Back">
+    <input class="nav-btn" type="submit" value="View Pokemon">
+    <input class="nav-btn" type="submit" formaction="/team/new" formmethod="GET" value="Create New Team">
 </form>
 {% endblock %}
 
