updated css and format for team/index.liquid file

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,7 +2,7 @@
     --color-pokemonRed: #e4000f;
     --color-darkGrey: rgb(71, 71, 71);
     --color-whiteGrey: rgb(192, 188, 188);
-    --color-lightGreen: rgb(189, 228, 170)
+    --color-lightGreen: rgb(189, 228, 170);
 }
 
 body {
