--- a/public/css/team.css
+++ b/public/css/team.css
@@ -16,10 +16,18 @@
 #otherTeams {
     min-height: 400px;
 }
-
+.team-box {
+    margin: 10px 0;
+    padding: 5px 10px;
+    min-height: 400px;
+    width: 515px;
+    border-radius: 15px;
+    background-color: rgb(140, 170, 125);
+}
 .team-div {
     position: relative;
-    margin: 10px 0;
+    margin-top: 5px ;
+    margin-bottom: 5px ;
     padding: 10px 7px;
     width: 500px;
     height: 125px;
