--- a/public/css/team.css
+++ b/public/css/team.css
@@ -40,24 +40,34 @@
     list-style: none;
 }
 .team-member {
+    display: inline-block;
     margin: 0 10px;
     height: 50px;
     width: 50px;
     background-color: whitesmoke;
     box-shadow: inset 0 0 2px 2px var(--color-whiteGrey);
 }
-
-.delete-btn {
+.team-btns {
     position: absolute;
-    margin: 10px;
-    padding: 5px 10px;
     top: 0;
     right: 0;
+    padding: 10px;
+}
+.edit-btn,
+.delete-btn {
+    position: relative;
+    margin-left: 10px;
+    top: 0;
+    padding: 5px 10px;
+    height: 30px;
+    width: 100px;
+
     color: white;
     font-size: 1em;
     border: none;
     background-color: var(--color-darkGrey);
 }
+.edit-btn:hover,
 .delete-btn:hover {
     background-color: var(--color-pokemonRed);
 }
