updated format for index.liquid page to have img link to pokemon/show

--- a/views/team/index.liquid
+++ b/views/team/index.liquid
@@ -32,7 +32,7 @@
                     <ul class="teamMembers">
                         {% for member in team.teamMembers %}
                         <li class="team-member">
-                            <img src="{{member.pokemonImg}}" alt="">
+                            <a href="/pokemon/{{member.pokemonId}}"></a><img src="{{member.pokemonImg}}" alt=""></a>
                         </li>
                         {% endfor %}
                     </ul>
@@ -58,7 +58,7 @@
                 <ul class="teamMembers">
                     {% for member in team.teamMembers %}
                     <li class="team-member">
-                        <img src="{{member.pokemonImg}}" alt="">
+                        <a href="/pokemon/{{member.pokemonId}}"><img src="{{member.pokemonImg}}" alt=""></a>
                     </li>
                     {% endfor %}
                 </ul>
