--- a/views/team/index.liquid
+++ b/views/team/index.liquid
@@ -25,8 +25,8 @@
                     <div class="team-btns">
                         <form action="/team/{{team._id}}/edit" method="GET">
                             <input class="edit-btn btn" type="submit" value="Edit Team">
-                            <input class="delete-btn btn" formaction="/team/{{team._id}}?_method=DELETE" formmethod="POST"
-                                type="submit" value="Delete Team">
+                            <input class="delete-btn btn" formaction="/team/{{team._id}}?_method=DELETE"
+                                formmethod="POST" type="submit" value="Delete Team">
                         </form>
                     </div>
                     <ul class="teamMembers">
@@ -36,37 +36,37 @@
                         </li>
                         {% endfor %}
                     </ul>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-    <!-- For loop to display all existing teams in their own divs -->
-    <div id="otherTeams">
-        <!-- only allow edit if the user owns the team -->
-        <h2>Other Teams</h2>
-        <div class="team-box">
-            {% for team in otherTeams %}
-            <div class="team-div">
-                {{ team.teamName}}
-                <div class="team-btns">
-                    <form action="/team/{{team._id}}/edit" method="GET">
-                        <input class="edit-btn btn" type="submit" value="Edit Team">
-                        <input class="delete-btn btn" formaction="/team/{{team._id}}?_method=DELETE" formmethod="POST"
-                            type="submit" value="Delete Team">
-                    </form>
                 </div>
-                <ul class="teamMembers">
-                    {% for member in team.teamMembers %}
-                    <li class="team-member">
-                        <a href="/pokemon/{{member.pokemonId}}"><img src="{{member.pokemonImg}}" alt=""></a>
-                    </li>
-                    {% endfor %}
-                </ul>
+                {% endfor %}
             </div>
-            {% endfor %}
+        </div>
+        <!-- For loop to display all existing teams in their own divs -->
+        <div id="otherTeams">
+            <!-- only allow edit if the user owns the team -->
+            <h2>Other Teams</h2>
+            <div class="team-box">
+                {% for team in otherTeams %}
+                <div class="team-div">
+                    {{ team.teamName}}
+                    <div class="team-btns">
+                        <form action="/team/{{team._id}}/edit" method="GET">
+                            <input class="edit-btn btn" type="submit" value="Edit Team">
+                            <input class="delete-btn btn" formaction="/team/{{team._id}}?_method=DELETE"
+                                formmethod="POST" type="submit" value="Delete Team">
+                        </form>
+                    </div>
+                    <ul class="teamMembers">
+                        {% for member in team.teamMembers %}
+                        <li class="team-member">
+                            <a href="/pokemon/{{member.pokemonId}}"><img src="{{member.pokemonImg}}" alt=""></a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                {% endfor %}
+            </div>
         </div>
     </div>
-</div>
 </div>
 {% endblock %}
 
