added logout route and added logout button to pages

--- a/views/pokemon/show.liquid
+++ b/views/pokemon/show.liquid
@@ -6,6 +6,7 @@
 <form action="/pokemon" method="GET">
     <input class="nav-btn" type="submit" value="Back">
     <input class="nav-btn" type="submit" formaction="/team" formmethod="GET" value="View Teams">
+    <input class="nav-btn" type="submit" formaction="/user/logout" formmethod="GET" value="Log Out">
 </form>
 {% endblock %}
 
