--- a/views/team/edit.liquid
+++ b/views/team/edit.liquid
@@ -8,6 +8,7 @@
 <form action="/pokemon" method="GET">
     <input class="nav-btn" type="submit" value="Back to Pokemon">
     <input class="nav-btn" type="submit" formaction="/team" formmethod="GET" value="back to Teams">
+    <input class="nav-btn" type="submit" formaction="/user/logout" formmethod="GET" value="Log Out">
 </form>
 {% endblock %}
 
