--- a/views/pokemon/index.liquid
+++ b/views/pokemon/index.liquid
@@ -7,6 +7,7 @@
 {% block navBar %}
 <form action="/team" method="GET">
     <input class="nav-btn" type="submit" value="View Teams">
+    <input class="nav-btn" type="submit" formaction="/user/logout" formmethod="GET" value="Log Out">
 </form>
 {% endblock %}
 
