--- a/views/team/index.liquid
+++ b/views/team/index.liquid
@@ -8,6 +8,7 @@
 <form action="/pokemon" method="GET">
     <input class="nav-btn" type="submit" value="View Pokemon">
     <input class="nav-btn" type="submit" formaction="/team/new" formmethod="GET" value="Create New Team">
+    <input class="nav-btn" type="submit" formaction="/user/logout" formmethod="GET" value="Log Out">
 </form>
 {% endblock %}
 
